# rustical

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
crates/caldav/src/: lib.rs
crates/caldav/src/calendar/: resource.rs
crates/caldav/src/calendar/methods/: post.rs
crates/caldav/src/calendar/methods/report/: calendar_multiget.rs  calendar_query.rs  mod.rs
crates/caldav/src/calendar_object/: methods.rs  resource.rs
crates/caldav/src/calendar_set/: mod.rs
crates/caldav/src/principal/: mod.rs
crates/carddav/src/address_object/: resource.rs
crates/carddav/src/addressbook/: resource.rs
crates/carddav/src/principal/: mod.rs
crates/dav/src/resource/: resource_service.rs
crates/dav/src/resource/methods/: delete.rs  propfind.rs  proppatch.rs
crates/dav/src/resources/: root.rs
crates/frontend/src/routes/: calendar.rs  mod.rs
crates/store/src/: calendar_store.rs  error.rs  lib.rs
crates/store/src/auth/: middleware.rs  user.rs
crates/store/src/calendar/: event.rs  object.rs
crates/store_huly/: Cargo.toml
crates/store_huly/src/: account_api.rs  addressbook_store.rs  api.rs  auth.rs  calendar_cache.rs  calendar_store.rs  convert.rs  convert_rrule.rs  convert_time.rs  lib.rs  subscription_store.rs  sync_cache.rs
crates/store_huly/tests/: test_convert.rs  test_rrule.rs
crates/store_sqlite/src/: lib.rs
src/: app.rs  config.rs  main.rs  setup_tracing.rs
src/commands/: mod.rs
