[package]
name = "rustical_store_huly"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[dependencies]
rustical_store = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
ical = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
